<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toBottomOf="@id/guidelineLeftTexture"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/ellipse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/ellips"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/guidelineEclipseLeft"
        app:layout_constraintEnd_toEndOf="@id/guidelineEclipseRight"
        app:layout_constraintTop_toTopOf="@id/guidelineEclipseTop"
    app:layout_constraintBottom_toBottomOf="@id/guidelineEclipseBottom"
    />

    <TextView
        android:id="@+id/tvBestPlaceForGear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/h4"
        android:layout_marginTop="@dimen/tvBestPlaceForGearMargin"
        app:layout_constraintTop_toTopOf="@id/guidelineLeftTexture"
        app:layout_constraintStart_toStartOf="@id/ellipse"
        app:layout_constraintBottom_toBottomOf="@id/ellipse"
        app:layout_constraintEnd_toEndOf="@id/ellipse"
        android:textAlignment="center"
        android:text="@string/bestPlace"
        android:gravity="center"
        android:textSize="35dp"
        />

    <TextView
        android:id="@+id/tvQuality"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/quality"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/tvBestPlaceForGear"
        app:layout_constraintEnd_toEndOf="@id/tvBestPlaceForGear"
        app:layout_constraintTop_toBottomOf="@id/tvBestPlaceForGear"
 />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_right"
        app:layout_constraintTop_toBottomOf="@id/guidelineLeftTexture"
        app:layout_constraintEnd_toEndOf="parent"
         />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonStart"
        style="@style/blueButtonStyle"
        android:layout_width="@dimen/smallBtnWidth"
        android:layout_height="@dimen/smallBtnHieght"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuality"
        app:layout_constraintEnd_toEndOf="@id/tvQuality"
        android:text="@string/start"
        app:layout_constraintStart_toStartOf="@id/tvQuality"
         />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeftTexture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEclipseLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEclipseRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEclipseTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineEclipseBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

</androidx.constraintlayout.widget.ConstraintLayout>